--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>
-      E-gadgets
-    </title>
-  </head>
-  <body>
-    <P>Welcome to our website</P>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>E-Gadgets</title>
+</head>
+<body>
+  <p>Welcome to Our Website</p>
+</body>
 </html>
