--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a href="#" class="logo"><i class='bx bxl-unity'></i></i></i>Electronics</a>
 
     <div class="bx bx-menu" id="menu"></div>
-    <div class="nav">
+    <div class="navbar">
 
         <li><a href="#home" class="home-active">Home</a></li>
         <div class="separator"></div>
