--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href="#lap" class="dropdown-item">Laptops</a>
           <a href="#mob" class="dropdown-item">Mobiles</a>
         </div>
-  
+  <!--this is div-->
       
         <div class="separator"></div>
         <li><a href="#about">About</a></li>
