drop-down changes

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#home" class="home-active">Home</a></li>
         <div class="separator"></div>
         
-        <li class="menu-icon" onclick="show_list()"><a href="#device">Devices</a></li>
+        <li class="menu-icon" onclick="show_list()"><a class="menu-ico" href="#device">Devices</a></li>
 
         <div class="dropdown" id="list">
           <a href="#lap" class="dropdown-item">Laptops</a>
