--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <header class="header">
-    <a href="#" class="logo"><i class='bx bxl-unity'></i></i></i>Electronics</a>
+    <a href="#" class="logo"><i class='bx bxl-unity'></i>Electronics</a>
     <div class="bx bx-menu" id="menu"></div>
     <div class="navbar">
       <li><a href="#home" class="home-active">Home</a></li>
@@ -158,10 +158,49 @@
   <h3>Amaya</h3>
 </div>
 </div>
-
-
     </div>
   </section>
+    <!--footer-->
+    <section class="footer" id="footer">
+      <div class="footer-box">
+        <a href="#" class="logo"><i class='bx bxl-unity'></i>Electronics</a>
+        <div class="footerchanges"> 
+        <p>Pallimula, <br>Thrissur, <br>Government College.</p>
+        <div class="social">
+          <a href="https://www.facebook.com/"><style color: ;></style><i class='bx bxl-facebook'></i></a>
+          <a href="https://www.twitter.com/"><i class='bx bxl-twitter'></i></a>
+          <a href="https://www.instagram.com/"><i class='bx bxl-instagram'></i></a>
+          <a href="https://www.whatsapp.com/"><i class='bx bxl-whatsapp'></i></a>
+          <a href="https://www.youtube.com/"><i class='bx bxl-youtube'></i></a>
+        </div>
+      </div>
+      </div>
+      <div class="footer-box">
+        <h2>Categories</h2>
+        <a class="Mobiles" href="#">Mobiles</a>
+        <a class="Mobiles" href="#">Laptop</a>
+      </div>
+      <div class="footer-box">
+        <h2>Useful Links</h2>
+        <a href="#">Payment & Tax</a>
+        <a href="#">Terms of Use</a>
+        <a href="#">My Blog</a>
+        <a href="#">Return Policy</a>
+      </div>
+      <div class="footer-box">
+        <h2>Newsletter</h2>
+        <p>Get 10% discount with <br>Email Newsletter</p>
+        <form action="">
+          <i class='bx bxs-envelope'></i>
+          <input type="email" name="" id="" placeholder="Enter you Email">
+          <i class='bx bx-arrow-back'></i>
+        </form>
+      </div>
+    </section>
+    <!--Copyright-->
+    <div class="copyright">
+      <p>&#169; CarpoolVenom All Right Reversed. </p>
+    </div>
 
 
 
