--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li><a href="#home" class="home-active">Home</a></li>
         <div class="separator"></div>
         
-        <li class="menu-icon" onclick="show_list()"><a class="menu-ico" href="#device">Devices
+        <li class="menu-icon" onclick="show_list()"><a class="menu-icon" href="#device">Devices
         </a>
         </li>
         <div class="dropdown" id="list">
