--- a/index2.html
+++ b/index2.html
@@ -5,5 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link rel="stylesheet" href="styles_about.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
+  <body>
+    <h1 class="heading">About Us</h1>
+    <p class="description">Welcome to our tech haven, where we bring you the best in laptops and mobiles. Our mission is to showcase the top-rated and most stylish devices in the market, carefully selected for their performance and design. Whether you're a tech enthusiast or just looking for the perfect device, we aim to provide you with an easy and enjoyable shopping experience. Explore our collection of bestsellers, and discover the latest in technology to match your needs!
+
+    </p>
+  </body>
 </html>
