--- a/index.html
+++ b/index.html
@@ -208,21 +208,21 @@
 <section class="footer" id="footer">
   <div class="footer-box">
     <a href="#" class="logo"><i class='bx bxl-unity'></i>Electronics</a>
-    <div class="footerchanges"> 
+    <div class="footerchanges">
       <p>Pallimula, <br>Thrissur, <br>Government College.</p>
       <div class="social">
-        <a href="https://www.facebook.com/"><i class='bx bxl-facebook'></i></a>
-        <a href="https://www.twitter.com/"><i class='bx bxl-twitter'></i></a>
-        <a href="https://www.instagram.com/"><i class='bx bxl-instagram'></i></a>
-        <a href="https://www.whatsapp.com/"><i class='bx bxl-whatsapp'></i></a>
-        <a href="https://www.youtube.com/"><i class='bx bxl-youtube'></i></a>
+        <a href="https://www.facebook.com/" target="_blank"><i class='bx bxl-facebook'></i></a>
+        <a href="https://www.twitter.com/" target="_blank"><i class='bx bxl-twitter'></i></a>
+        <a href="https://www.instagram.com/" target="_blank"><i class='bx bxl-instagram'></i></a>
+        <a href="https://www.whatsapp.com/" target="_blank"><i class='bx bxl-whatsapp'></i></a>
+        <a href="https://www.youtube.com/" target="_blank"><i class='bx bxl-youtube'></i></a>
       </div>
     </div>
   </div>
   <div class="footer-box">
     <h2>Categories</h2>
-    <a class="Mobiles" href="#">Mobiles</a>
-    <a class="Mobiles" href="#">Laptops</a>
+    <a href="#">Laptops</a>
+    <a href="#">Mobiles</a>
   </div>
   <div class="footer-box">
     <h2>Useful Links</h2>
@@ -234,10 +234,10 @@
   <div class="footer-box">
     <h2>Newsletter</h2>
     <p>Get 10% discount with <br>Email Newsletter</p>
-    <form action="">
+    <form action="" method="post">
       <i class='bx bxs-envelope'></i>
-      <input type="email" placeholder="Enter your Email" required>
-      <button type="submit" class="subscribe-btn"><i class='bx bx-arrow-back'></i></button>
+      <input type="email" name="email" id="email" placeholder="Enter your Email" required>
+      <i class='bx bx-arrow-back'></i>
     </form>
   </div>
 </section>
