--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
   </div>
   <div class="footer-box">
     <h2>Categories</h2>
-    <a href="#">Laptops</a>
-    <a href="#">Mobiles</a>
+    <a href="index1.html">Laptops</a>
+    <a href="index1.html">Mobiles</a>
   </div>
   <div class="footer-box">
     <h2>Useful Links</h2>
