--- a/index1.html
+++ b/index1.html
@@ -20,8 +20,149 @@
       <div class="separator"></div>
       <li ><a href="#">Laptops</a></li>
       <div class="separator"></div>
-      <li><img class="wishlist" src="wishlist.png"></li>
+      <li ><a href="index.html">Home</a></li>
+      <div class="separator"></div>
+      <li><img  class="wishlist" src="wishlist.png"></li>
     </div>
   </header>
+  <section class="laptops" id="laptops">
+    <div class="heading">
+      <h1>Our Popular <span>Products</span></h1>
+      <a  class="bt">Laptops</i></a>
+    </div>   
+    <div class="laptops-container">
+      <!-- 1 -->
+      <div class="box">
+        <img src="lap4.avif" alt="">
+        <span>Great Deal</span>
+        <h2>MacBook pro <br>1TB   16 inch</h2>
+        <h3 class="price">60000rs</h3>
+        <i class='bx bx-cart-alt'></i>
+        <i class='bx bx-heart'></i>
+        <span class="discount">-25%</span>
+      </div>
+      <!-- 2 -->
+      <div class="box">
+        <img src="lap5.avif" alt="">
+        <span>Great Deal</span>
+        <h2>Dell <br>500GB   14 inch</h2>
+        <h3 class="price">10000rs</h3>
+        <i class='bx bx-cart-alt'></i>
+        <i class='bx bx-heart'></i>
+        <span class="discount">-25%</span>
+      </div>
+      <!-- 3 -->
+      <div class="box">
+        <img src="lap2.avif" alt="">
+        <span>Great Deal</span>
+        <h2>MacBook M3 <br>500GB   16 inch</h2>
+        <h3 class="price">90000rs</h3>
+        <i class='bx bx-cart-alt'></i>
+        <i class='bx bx-heart'></i>
+        <span class="discount">-10%</span>
+      </div>
+      <!-- 4 -->
+      <div class="box">
+        <img src="lap6.avif" alt="">
+        <span>Great Deal</span>
+        <h2>Lenova <br>500GB   16 inch </h2>
+        <h3 class="price">10000rs</h3>
+        <i class='bx bx-cart-alt'></i>
+        <i class='bx bx-heart'></i>
+        <span class="discount">-25%</span>
+      </div>
+      <!-- 5 -->
+      <div class="box">
+        <img src="lap7.avif" alt="">
+        <span>Great Deal</span>
+        <h2>MacBook <br>1TB   15 inch</h2>
+        <h3 class="price">10000rs</h3>
+        <i class='bx bx-cart-alt'></i>
+        <i class='bx bx-heart'></i>
+        <span class="discount">-25%</span>
+      </div>
+      <!-- 6 -->
+      <div class="box">
+        <img src="lap8.avif" alt="">
+        <span>Great Deal</span>
+        <h2>Lenova <br>1TB    15 inch</h2>
+        <h3 class="price">10000rs</h3>
+        <i class='bx bx-cart-alt'></i>
+        <i class='bx bx-heart'></i>
+        <span class="discount">-25%</span>
+      </div>
+    </div>
+  </section>
+
+  <section class="mobiles" id="mobiles">
+    <div class="heading">
+      <a  class="bt">Mobiles</i></a>
+    </div>   
+    <div class="mobiles-container">
+      <!-- 1 -->
+
+      <div class="box">
+        <img src="mobile6.avif" alt="">
+        <span>Best Seller</span>
+        <h2>IQ 9 Pro <br>512GB  12GB Ram</h2>
+        <h3 class="price">20999rs</h3>
+        <i class='bx bx-cart-alt'></i>
+        <i class='bx bx-heart'></i>
+        <span class="discount">-25%</span>
+      </div>
+      <!-- 2 -->
+      <div class="box">
+        <img src="mobile2.avif" alt="">
+        <span>Great Deal</span>
+        <h2>Lenova <br>256GB   8GB</h2>
+        <h3 class="price">23999rs</h3>
+        <i class='bx bx-cart-alt'></i>
+        <i class='bx bx-heart'></i>
+        <span class="discount">-5%</span>
+      </div>
+      <!-- 3 -->
+      <div class="box">
+        <img src="mobile3.avif" alt="">
+        <span>Great Deal</span>
+        <h2>I Phone 16 <br>1TB   16GB Ram</h2>
+        <h3 class="price">109999rs</h3>
+        <i class='bx bx-cart-alt'></i>
+        <i class='bx bx-heart'></i>
+        <span class="discount">-10%</span>
+      </div>
+      <!-- 4 -->
+      <div class="box">
+        <img src="mobile5.jpg" alt="">
+        <span>Great Deal</span>
+        <h2>I Phone 13 pro <br>1TB 16GB Ram   </h2>
+        <h3 class="price">99999rs</h3>
+        <i class='bx bx-cart-alt'></i>
+        <i class='bx bx-heart'></i>
+        <span class="discount">-25%</span>
+      </div>
+      <!-- 5 -->
+      <div class="box">
+        <img src="mobile1.avif" alt="">
+        <span>Great Deal</span>
+        <h2>Samsung S23<br>1TB   16GB Ram</h2>
+        <h3 class="price">70000rs</h3>
+        <i class='bx bx-cart-alt'></i>
+        <i class='bx bx-heart'></i>
+        <span class="discount">-15%</span>
+      </div>
+      <!-- 6 -->
+      <div class="box">
+        <img src="mobile7.avif" alt="">
+        <span>Great Deal</span>
+        <h2>VIVO <br>256GB    8GB Ram</h2>
+        <h3 class="price">17999rs</h3>
+        <i class='bx bx-cart-alt'></i>
+        <i class='bx bx-heart'></i>
+        <span class="discount">-15%</span>
+      </div>
+    </div>
+  </section>
+
+
 </body>
 </html>
