--- a/index2.html
+++ b/index2.html
@@ -10,8 +10,50 @@
   </head>
   <body>
     <h1 class="heading">About Us</h1>
-    <p class="description">Welcome to our tech haven, where we bring you the best in laptops and mobiles. Our mission is to showcase the top-rated and most stylish devices in the market, carefully selected for their performance and design. Whether you're a tech enthusiast or just looking for the perfect device, we aim to provide you with an easy and enjoyable shopping experience. Explore our collection of bestsellers, and discover the latest in technology to match your needs!
+    <p class="description">Welcome to our tech haven,
+       where we bring you the best in laptops and mobiles.
+        Our mission is to showcase the top-rated and most stylish 
+        devices in the market, carefully selected for their performance
+         and design. Whether you're a tech enthusiast or just looking 
+         for the perfect device, we aim to provide you with an easy and
+          enjoyable shopping experience. Explore our collection of bestsellers,
+           and discover the latest in technology to match your needs!
 
     </p>
+<div class="image">
+  <img src="about1.avif" alt="">
+  <p>At Electronics, we understand that choosing the right mobile phone or laptop can <br>be overwhelming.  With countless options available, it’s crucial to find the<br> perfect device that meets your needs, whether for work, study, or leisure.<br> Our team of tech enthusiasts and experts is committed to simplifying your <br>decision-making process by offering detailed product reviews, comparisons, and <br>buying guides tailored to various budgets and requirements.<br>
+
+    Our mission is to empower consumers with reliable information and help them stay<br> informed about the rapidly evolving tech landscape. From in-depth articles on<br> the latest trends to practical tips and tricks for optimizing your devices,<br> we aim to enhance your digital experience.<br>
+    
+    Join us as we explore the world of mobile and laptop technology. Whether you’re <br>a tech novice or a seasoned expert, [Your Website Name] is here to support<br> you on your journey. Let’s dive into the future of technology together!<br>
+    
+    </p>
+
+   <h1>Devices</h1>
+   <div class="about">
+    <img src="about2.jpg" alt="">
+  </div>
+   
+   <h2 class="lap">Laptops</h2>
+   <p>At our shop, we offer a wide range of laptops to meet all your needs, whether <br>
+     for work, school, or leisure. Our selection includes everything from lightweight 
+    <br>ultrabooks perfect for on-the-go use to powerful gaming laptops that can handle <br>
+    the latest titles. Each laptop features the latest processors and high-quality <br>
+    displays, ensuring a smooth and enjoyable experience. With long battery <br>
+    life and various storage options, you can find the perfect laptop to fit <br>
+    your lifestyle. Visit us today to discover the right laptop that combines <br>
+    performance, style, and affordability!<br></p>
+   <h2 class="mob">Mobiles</h2>
+   <p class="p">At our shop, we carry a diverse selection of mobile phones to suit every lifestyle <br>
+     and budget. Whether you’re looking for the latest flagship model packed with cutting-edge <br>
+     technology or a reliable budget-friendly option, we have something for everyone. <br>
+     Our smartphones feature high-resolution cameras for stunning photos, vibrant displays 
+    <br>for immersive viewing, and long-lasting batteries to keep you connected throughout <br>
+    the day. With various storage capacities and sleek designs, you can find the perfect<br>
+     mobile device that fits your needs and style. Visit us today to explore our <br>
+     collection and discover the ideal phone to enhance your daily life!<br></p>
+
+  </div>
   </body>
 </html>
