images_to_folder

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <span>Details</span>
         <a href="#" class="btn">Shop Now<i class='bx bx-right-arrow-alt'></i></a>
       </div>
-      <div class="lap-div"><img class="lap" src="mobile6.avif" alt=""></div>
+      <div class="lap-div"><img class="lap" src="images/mobile6.avif" alt=""></div>
     </div>
     <!-- Slide 2 -->
     <div class="swiper-slide container">
@@ -47,7 +47,7 @@
         <span>Details</span>
         <a href="#" class="btn">Shop Now<i class='bx bx-right-arrow-alt'></i></a>
       </div>
-      <div><img class="lap" src="lap4.avif" alt=""></div>
+      <div><img class="lap" src="images/lap4.avif" alt=""></div>
     </div>
     <!-- Slide 3 -->
     <div class="swiper-slide container">
@@ -56,7 +56,7 @@
         <span>Details</span>
         <a href="#" class="btn">Shop Now<i class='bx bx-right-arrow-alt'></i></a>
       </div>
-      <div><img class="lap" src="lap14.jpg" alt=""></div>
+      <div><img class="lap" src="images/lap14.jpg" alt=""></div>
     </div>
   </div>
   <div class="swiper-button-next"></div>
@@ -72,7 +72,7 @@
   <div class="products-container">
     <!-- 1 -->
     <div class="box">
-      <img src="lap4.avif" alt="">
+      <img src="images/lap4.avif" alt="">
       <span>Great Deal</span>
       <h2>MacBook pro <br>1TB   16 inch</h2>
       <h3 class="price">60000rs</h3>
@@ -82,7 +82,7 @@
     </div>
     <!-- 2 -->
     <div class="box">
-      <img src="lap5.avif" alt="">
+      <img src="images/lap5.avif" alt="">
       <span>Great Deal</span>
       <h2>Dell <br>500GB   14 inch</h2>
       <h3 class="price">10000rs</h3>
@@ -92,7 +92,7 @@
     </div>
     <!-- 3 -->
     <div class="box">
-      <img src="lap6.avif" alt="">
+      <img src="images/lap6.avif" alt="">
       <span>Great Deal</span>
       <h2>Lenova <br>500GB   16 inch</h2>
       <h3 class="price">10000rs</h3>
@@ -102,7 +102,7 @@
     </div>
     <!-- 4 -->
     <div class="box">
-      <img src="mobile2.avif" alt="">
+      <img src="images/mobile2.avif" alt="">
       <span>Great Deal</span>
       <h2>Lenova <br>128GB   8GB Ram</h2>
       <h3 class="price">10000rs</h3>
@@ -112,7 +112,7 @@
     </div>
     <!-- 5 -->
     <div class="box">
-      <img src="lap7.avif" alt="">
+      <img src="images/lap7.avif" alt="">
       <span>Great Deal</span>
       <h2>MacBook <br>1TB   15 inch</h2>
       <h3 class="price">10000rs</h3>
@@ -122,7 +122,7 @@
     </div>
     <!-- 6 -->
     <div class="box">
-      <img src="mobile3.avif" alt="">
+      <img src="images/mobile3.avif" alt="">
       <span>Great Deal</span>
       <h2>I phone <br>256GB   8GB Ram</h2>
       <h3 class="price">10000rs</h3>
@@ -155,7 +155,7 @@
         find the perfect laptop for my needs.
          I highly recommend it for anyone in the market for tech!"</p>
       <div class="review-profile">
-        <img class="photo" src="review.avif" alt="">
+        <img class="photo" src="images/review.avif" alt="">
         <h3 class="name">Michel Smith</h3>
       </div>
     </div>
@@ -176,7 +176,7 @@
          prices and the helpful staff. I’ll definitely return for
           my next purchase!"</p>
       <div class="review-profile">
-        <img src="review1.avif" alt="">
+        <img src="images/review1.avif" alt="">
         <h3>Rajiv</h3>
       </div>
     </div>
@@ -197,7 +197,7 @@
          and the staff was friendly and professional.
           My laptop works like new now!"</p>
       <div class="review-profile">
-        <img src="review3.jpg" alt="">
+        <img src="images/review3.jpg" alt="">
         <h3>Amaya</h3>
       </div>
     </div>
