--- a/index2.html
+++ b/index2.html
@@ -21,7 +21,7 @@
 
     </p>
 <div class="image">
-  <img src="about1.avif" alt="">
+  <img src="images/about1.avif" alt="">
   <p>At Electronics, we understand that choosing the right mobile phone or laptop can <br>be overwhelming.  With countless options available, it’s crucial to find the<br> perfect device that meets your needs, whether for work, study, or leisure.<br> Our team of tech enthusiasts and experts is committed to simplifying your <br>decision-making process by offering detailed product reviews, comparisons, and <br>buying guides tailored to various budgets and requirements.<br>
 
     Our mission is to empower consumers with reliable information and help them stay<br> informed about the rapidly evolving tech landscape. From in-depth articles on<br> the latest trends to practical tips and tricks for optimizing your devices,<br> we aim to enhance your digital experience.<br>
@@ -32,7 +32,7 @@
 
    <h1>Devices</h1>
    <div class="about">
-    <img src="about2.jpg" alt="">
+    <img src="images/about2.jpg" alt="">
   </div>
    
    <h2 class="lap">Laptops</h2>
