--- a/index1.html
+++ b/index1.html
@@ -22,7 +22,7 @@
       <div class="separator"></div>
       <li ><a href="index.html">Home</a></li>
       <div class="separator"></div>
-      <li><img  class="wishlist" src="wishlist.png"></li>
+      <li><img  class="wishlist" src="images/wishlist.png"></li>
     </div>
   </header>
   <section class="laptops" id="laptops">
@@ -33,7 +33,7 @@
     <div class="laptops-container">
       <!-- 1 -->
       <div class="box">
-        <img src="lap4.avif" alt="">
+        <img src="images/lap4.avif" alt="">
         <span>Great Deal</span>
         <h2>MacBook pro <br>1TB   16 inch</h2>
         <h3 class="price">60000rs</h3>
@@ -43,7 +43,7 @@
       </div>
       <!-- 2 -->
       <div class="box">
-        <img src="lap5.avif" alt="">
+        <img src="images/lap5.avif" alt="">
         <span>Great Deal</span>
         <h2>Dell <br>500GB   14 inch</h2>
         <h3 class="price">10000rs</h3>
@@ -53,7 +53,7 @@
       </div>
       <!-- 3 -->
       <div class="box">
-        <img src="lap2.avif" alt="">
+        <img src="images/lap2.avif" alt="">
         <span>Great Deal</span>
         <h2>MacBook M3 <br>500GB   16 inch</h2>
         <h3 class="price">90000rs</h3>
@@ -63,7 +63,7 @@
       </div>
       <!-- 4 -->
       <div class="box">
-        <img src="lap6.avif" alt="">
+        <img src="images/lap6.avif" alt="">
         <span>Great Deal</span>
         <h2>Lenova <br>500GB   16 inch </h2>
         <h3 class="price">10000rs</h3>
@@ -73,7 +73,7 @@
       </div>
       <!-- 5 -->
       <div class="box">
-        <img src="lap7.avif" alt="">
+        <img src="images/lap7.avif" alt="">
         <span>Great Deal</span>
         <h2>MacBook <br>1TB   15 inch</h2>
         <h3 class="price">10000rs</h3>
@@ -83,7 +83,7 @@
       </div>
       <!-- 6 -->
       <div class="box">
-        <img src="lap8.avif" alt="">
+        <img src="images/lap8.avif" alt="">
         <span>Great Deal</span>
         <h2>Lenova <br>1TB    15 inch</h2>
         <h3 class="price">10000rs</h3>
@@ -102,7 +102,7 @@
       <!-- 1 -->
 
       <div class="box">
-        <img src="mobile6.avif" alt="">
+        <img src="images/mobile6.avif" alt="">
         <span>Best Seller</span>
         <h2>IQ 9 Pro <br>512GB  12GB Ram</h2>
         <h3 class="price">20999rs</h3>
@@ -112,7 +112,7 @@
       </div>
       <!-- 2 -->
       <div class="box">
-        <img src="mobile2.avif" alt="">
+        <img src="images/mobile2.avif" alt="">
         <span>Great Deal</span>
         <h2>Lenova <br>256GB   8GB</h2>
         <h3 class="price">23999rs</h3>
@@ -122,7 +122,7 @@
       </div>
       <!-- 3 -->
       <div class="box">
-        <img src="mobile3.avif" alt="">
+        <img src="images/mobile3.avif" alt="">
         <span>Great Deal</span>
         <h2>I Phone 16 <br>1TB   16GB Ram</h2>
         <h3 class="price">109999rs</h3>
@@ -132,7 +132,7 @@
       </div>
       <!-- 4 -->
       <div class="box">
-        <img src="mobile5.jpg" alt="">
+        <img src="images/mobile5.jpg" alt="">
         <span>Great Deal</span>
         <h2>I Phone 13 pro <br>1TB 16GB Ram   </h2>
         <h3 class="price">99999rs</h3>
@@ -142,7 +142,7 @@
       </div>
       <!-- 5 -->
       <div class="box">
-        <img src="mobile1.avif" alt="">
+        <img src="images/mobile1.avif" alt="">
         <span>Great Deal</span>
         <h2>Samsung S23<br>1TB   16GB Ram</h2>
         <h3 class="price">70000rs</h3>
@@ -152,7 +152,7 @@
       </div>
       <!-- 6 -->
       <div class="box">
-        <img src="mobile7.avif" alt="">
+        <img src="images/mobile7.avif" alt="">
         <span>Great Deal</span>
         <h2>VIVO <br>256GB    8GB Ram</h2>
         <h3 class="price">17999rs</h3>
