--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles_gadget.css">
-  
+  <link rel="stylesheet" href="general.css">
 </head>
 <body>
   <header class="header-devices">
